--- a/static/style.css
+++ b/static/style.css
@@ -99,7 +99,7 @@ footer {
 }
 
 .faixa-torcida {
-    background: linear-gradient(to right, #ff0000, #000000);
+    background: linear-gradient(to right, #ff0000, white, #000000);
     color: white;
     text-align: center;
     font-weight: bold;
